<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/thanks_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50sp"
        android:text="@string/app_info_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/start_activity_background_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:paddingTop="30sp"
        android:layout_below="@+id/thanks_text"
        android:src="@drawable/start_activity_background" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_activity_background_image"
        android:paddingStart="30sp"
        android:paddingTop="30sp"
        android:text="@string/app_info_app_version"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/short_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version"
        android:paddingStart="30sp"
        android:paddingTop="30sp"
        android:text="@string/app_info_short_info"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/short_info"
        android:paddingStart="30sp"
        android:paddingTop="30sp"
        android:text="@string/app_info_app_developer"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/app_info_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developer"
        android:linksClickable="true"
        android:paddingStart="30sp"
        android:paddingTop="30sp"
        android:text="@string/app_info_app_contacts"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/app_info_licence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_info_contacts"
        android:linksClickable="true"
        android:paddingStart="30sp"
        android:paddingTop="30sp"
        android:text="@string/app_info_app_licence"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

</RelativeLayout>