<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#DDDDDD"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingBottom="5dp"
                android:text="@string/user_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingBottom="5dp"
                android:text="@string/user_surname" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingBottom="5dp"
                android:text="@string/user_birth_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingBottom="5dp"
                android:text="@string/user_role" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/user_list_id"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/user_list_name"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingBottom="5dp"
                android:text="Ivan" />

            <TextView
                android:id="@+id/user_list_surname"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingBottom="5dp"
                android:text="Akulenka" />

            <TextView
                android:id="@+id/user_list_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingBottom="5dp"
                android:text="24.07.1987" />

            <TextView
                android:id="@+id/user_list_role"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingBottom="5dp"
                android:text="Посетитель" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:paddingStart="10px">

            <Button
                android:id="@+id/accept_user"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:text="@string/user_card_accept_user"
                android:textSize="12sp" />

            <Button
                android:id="@+id/add_subscription"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:text="@string/user_card_add_subscription"
                android:textSize="12sp" />

            <Button
                android:id="@+id/use_subscription"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:text="@string/user_card_spend_training"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
