<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10sp">

    <TextView
        android:text="@string/hyperlink_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableLayout
        android:id="@+id/table_for_hyperlink_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:text="@string/hyperlink_setup_link_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <EditText
                android:id="@+id/hyperlink_setup_copy"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200sp"
                android:layout_column="2"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hyperlink_setup_copy_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <EditText
                android:id="@+id/hyperlink_setup_link"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200sp"
                android:layout_column="2"/>
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hyperlink_setup_save_button_label"
        android:id="@+id/hyperlink_setup_save_button" />

</LinearLayout>