<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/home_visitor_root">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/user_subscription_card"
        android:id="@+id/visitor_home_subscription_container"
        android:orientation="horizontal"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_visitor_root2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/user_subscription_title" />

            <TextView
                android:id="@+id/visitor_label_subscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:text="@string/user_subscription_number_of_visits" />

            <TextView
                android:id="@+id/visitor_label_subscription_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:text="@string/user_subscription_deadline" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_visitor_root3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="" />

            <TextView
                android:id="@+id/visitor_home_subscription_visits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text=" - " />

            <TextView
                android:id="@+id/visitor_home_subscription_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text=" - " />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/user_subscription__qr_code"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/visitor_home_not_accepted_to_club_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/visitor_home_not_accepted_to_club_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary"
        android:visibility="gone" />

    <TextView
        android:id="@+id/visitor_home_no_active_subscriptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/visitor_home_no_active_subscriptions_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary"
        android:visibility="gone" />

</LinearLayout>